--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <my-name name="Nour Eddin Khanjar"></my-name>
-<script src="./dist/index.js"></script>
+<script src="./dist/script.min.js"></script>
 </body>
 </html>
