Update the project to ues rollup instead of babel

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Custom Elements</title>
+    <script src="./dist/index.cjs.js"></script>
 </head>
 <body>
-<my-name name="Nour Eddin Khanjar"></my-name>
-<script src="./dist/script.min.js"></script>
+<my-name></my-name>
 </body>
 </html>
